--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 
 <head>
     <title>Budgeteer</title>
+    <link rel="stylesheet" type="text/css" href="lib/kalendae.css" />
     <link rel="stylesheet" type="text/css" href="budgeteer.css" />
     <script type="text/javascript" src="lib/truman.js"></script>
     <script type="text/javascript" src="lib/canvasjs.min.js"></script>
+    <script type="text/javascript" src="lib/kalendae.standalone.min.js"></script>
     <script type="text/javascript" src="budgeteer.js"></script>
 </head>
 
@@ -14,17 +16,11 @@
         <header>
             <h1>Budgeteer</h1>
         </header>
-<!-- 
-        <form action="/budgets" method="POST">
-            <fieldset>
-                <legend>Set your monthly budget</legend>
-                <input type="text" name="amount" />
-                <input type="submit" value="Submit" />
-            </fieldset>
-        </form>
- -->
+
         <form id="expenses-form" action="/expenses" method="POST">
             <input type="text" name="description" placeholder="Enter an expense in the form '$50 for groceries'" />
+            <input type="text" name="date" />
+            <input type="submit" />
         </form>
 
         <table id="expenses-table">
