--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <thead>
                 <tr>
                     <th>Date</th>
+                    <th>Time</th>
                     <th>Description</th>
                     <th>Amount</th>
                 </tr>
@@ -37,6 +38,7 @@
 
             <tfoot>
                 <tr>
+                    <td></td>
                     <td></td>
                     <td>Total</td>
                     <td></td>
