added bar to show money remaining

--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
         </table>
 
         <div id="expenses-chart"></div>
+
+        <div id="spending-bar">
+            <div class="remaining"><span></span></div>
+        </div>
     </main>
 </body>
 
